// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Build-time theming of main theme with matching baseThemeId generates the correct css files 1`] = `
"body {
  --font-family-base-rpbu7d:"Amazon Ember", "Helvetica Neue", Roboto, Arial, sans-serif;
  --color-orange-500-25sm1g:#ec7211;
  --color-orange-700-2auf4j:#dd6b10;
  --color-background-button-primary-default-cqohzr:#aaaaaa;
  --color-background-button-primary-active-h8she0:var(--color-orange-700-2auf4j);
  --space-xxs-ihlmrd:4px;
  --space-xs-xhls0c:8px;
  --space-scaled-xs-26ut8b:var(--space-xs-xhls0c);
}

.compact-mode:not(#\\9) {
  --space-scaled-xs-26ut8b:var(--space-xxs-ihlmrd);
}

.dark-mode:not(#\\9) {
  --color-background-button-primary-default-cqohzr:#bbbbbb;
  --color-background-button-primary-active-h8she0:var(--color-orange-500-25sm1g);
}

.secondary:not(#\\9) {
  --color-orange-500-25sm1g:#ec72aa;
  --color-orange-700-2auf4j:#dd6baa;
  --color-background-button-primary-default-cqohzr:var(--color-orange-500-25sm1g);
  --color-background-button-primary-active-h8she0:var(--color-orange-700-2auf4j);
}

.dark-mode.secondary:not(#\\9) {
  --color-background-button-primary-default-cqohzr:var(--color-orange-700-2auf4j);
  --color-background-button-primary-active-h8she0:var(--color-orange-500-25sm1g);
}"
`;

exports[`Build-time theming of secondary theme generates the correct css files 1`] = `
"body {
  --font-family-base-rpbu7d:"Amazon Ember", "Helvetica Neue", Roboto, Arial, sans-serif;
  --color-orange-500-25sm1g:#ec7211;
  --color-orange-700-2auf4j:#dd6b10;
  --color-background-button-primary-default-l567s3:var(--color-orange-500-25sm1g);
  --color-background-button-primary-active-h8she0:var(--color-orange-700-2auf4j);
  --space-xxs-ihlmrd:4px;
  --space-xs-xhls0c:8px;
  --space-scaled-xs-26ut8b:var(--space-xs-xhls0c);
}

.compact-mode:not(#\\9) {
  --space-scaled-xs-26ut8b:var(--space-xxs-ihlmrd);
}

.dark-mode:not(#\\9) {
  --color-background-button-primary-active-h8she0:var(--color-orange-500-25sm1g);
}

.secondary:not(#\\9) {
  --color-orange-500-25sm1g:#ec72aa;
  --color-orange-700-2auf4j:#dd6baa;
  --color-background-button-primary-default-l567s3:#aaaaaa;
  --color-background-button-primary-active-h8she0:var(--color-orange-700-2auf4j);
}

.dark-mode.secondary:not(#\\9) {
  --color-background-button-primary-default-l567s3:#bbbbbb;
  --color-background-button-primary-active-h8she0:var(--color-orange-500-25sm1g);
}"
`;
